Fixes alignment issues

--- a/static/defer.scss
+++ b/static/defer.scss
@@ -27,6 +27,7 @@
 /* originalPostEmbed shortcode */
 browser-window {
 	margin: 1em 0;
+	font-size: 1rem;
 }
 browser-window > a {
 	display: flex;
